fix: alterando z-index do modal

--- a/wordpress/polen/themes/polen/assets/scss/_zuck.scss
+++ b/wordpress/polen/themes/polen/assets/scss/_zuck.scss
@@ -25,7 +25,7 @@
     width: 100vw;
     height: 100%;
     background: rgba(0, 0, 0, 0.75);
-    z-index: 9999999;
+    z-index: 998;
     font-size: 14px;
     font-family: inherit;
 }
